Little trick to avoid layout shift in override mode since it introduces a new p element

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -388,8 +388,9 @@ a {
 }
 #header {
   flex-shrink: 0;
-  text-align: center;
+  position: relative;
   padding: 1.6rem 3.2rem;
+  text-align: center;
   overflow: hidden;
 }
 #header h2 {
@@ -400,7 +401,12 @@ a {
   text-transform: uppercase;
 }
 .override-hint {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
   font-family: var(--fontSpiegel);
+  white-space: nowrap;
 }
 #champion-controls {
   flex-shrink: 0;
